# mantui

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: cd.yaml
src/: args.rs  main.rs
src/core/: descriptor.rs  lister.rs  manual.rs  mod.rs  reader.rs
src/ui/: app.rs  events.rs  mod.rs  terminal.rs  theme.rs
src/ui/events/: widget.rs
src/ui/pages/: desc.rs  help.rs  home.rs  list.rs  man.rs  manual.rs  mod.rs  reader.rs  search.rs  utils.rs
