[package]
name = "mantui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
tachyonfx = { version = "0.10", features = ["std-duration"] }
# tui-widget-list = "0.13"
tui-widget-list = { version = "0.13", path = "../tui-widget-list" }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
ansi-to-tui = "7.0.0"
throbber-widgets-tui = "0.8.0"
uuid = { version = "1.11.0", features = ["v4"] }
