[package]
name = "mantui"
version = "0.1.0"
edition = "2021"
authors = ["preiter <phil.reiter93@gmail.com>"]
repository = "https://github.com/preiter93/mantui"
keywords = ["man", "pages", "ratatui", "tui"]
license = "MIT"

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
tachyonfx = { version = "0.10", features = ["std-duration"] }
tui-widget-list = "0.13"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
ansi-to-tui = "7.0.0"
throbber-widgets-tui = "0.8.0"
uuid = { version = "1.11.0", features = ["v4"] }
arboard = "3.4.1"
tui-event-controller = { version = "0.1.0", git = "https://github.com/preiter93/tui-event-controller.git" }

serde = { version = "1.0" }
ratatheme = { package = "ratatheme", git = "https://github.com/preiter93/ratatheme.git", branch = "main" }
# ratatheme = { version = "0.1.0", path = "../ratatheme/ratatheme", package = "ratatheme" }

toml = "0.8"
