[package]
name = "mantui"
version = "0.1.1"
edition = "2021"
authors = ["preiter <phil.reiter93@gmail.com>"]
repository = "https://github.com/preiter93/mantui"
keywords = ["man", "pages", "ratatui", "tui"]
license = "MIT"

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
ratatui = { version = "0.30.0", features = ["unstable-widget-ref", "serde"] }
tachyonfx = { version = "0.22", features = ["std-duration"] }
tui-widget-list = "0.14"
tokio = { version = ">=1.43.1", features = ["rt", "macros", "rt-multi-thread"] }
ansi-to-tui = "8.0.0"
throbber-widgets-tui = "0.10.0"
uuid = { version = "1.11.0", features = ["v4"] }
arboard = "3.4.1"
tui-event-controller = { version = "0.2.0", git = "https://github.com/preiter93/tui-event-controller.git" }
serde = { version = "1.0" }
tui-theme-builder = { version = "0.2.0", git = "https://github.com/preiter93/tui-theme-builder.git" }
toml = "0.9"
